# flowvoice

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: asr_service.py  cleanup_service.py  config.py  elevenlabs_service.py  main.py  playback_queue.py  room_handler.py  room_manager.py  tts_service.py  vad.py  voice_store.py  websocket_manager.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: audio-processor.js  pcm-playback-processor.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ParticipantCard.jsx  RoomJoin.jsx  StatusIndicator.jsx  TranscriptDisplay.jsx
frontend/src/hooks/: useAudioCapture.js  usePCMPlayback.js  usePlaybackQueue.js  useWebSocket.js
frontend/src/pages/: VoiceClonePage.jsx
